Closed Bug 1807011 Opened 1 year ago Closed 1 year ago

AutoProfilerTextMarker may call TimeStamp::Now even when the profiler isn't running?

Categories

(Core :: Gecko Profiler, defect, P2)

defect

Tracking

()

RESOLVED FIXED
111 Branch
Tracking Status
firefox111 --- fixed

People

(Reporter: smaug, Assigned: canova)

References

(Blocks 1 open bug)

Details

(Whiteboard: [sp3])

Attachments

(1 file)

Priority: -- → P2

The severity field is not set for this bug.
:canova, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(canaltinova)
Severity: -- → S3
Flags: needinfo?(canaltinova)
Assignee: nobody → canaltinova
Status: NEW → ASSIGNED
Pushed by canaltinova@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/b9eaa2a5712c
Do not call TimeStamp::Now for text markers when profiler is not running r=julienw
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch
Whiteboard: [sp3]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: