Bug 1807011 - Do not call TimeStamp::Now for text markers when profiler is not running r=julienw

Differential Revision: https://phabricator.services.mozilla.com/D166804