mozglue/baseprofiler/public/BaseProfilerMarkers.h
@@ -203,16 +203,19 @@ class MOZ_RAII AutoProfilerTextMarker {
         mText(aText) {
     MOZ_ASSERT(mOptions.Timing().EndTime().IsNull(),
                "AutoProfilerTextMarker options shouldn't have an end time");
-    if (mOptions.Timing().StartTime().IsNull()) {
+    if (profiler_is_active_and_unpaused() &&
+        mOptions.Timing().StartTime().IsNull()) {
       mOptions.Set(MarkerTiming::InstantNow());
     }
   }
 
   ~AutoProfilerTextMarker() {
-    mOptions.TimingRef().SetIntervalEnd();
-    AUTO_PROFILER_STATS(AUTO_BASE_PROFILER_MARKER_TEXT);
-    AddMarker(ProfilerString8View::WrapNullTerminatedString(mMarkerName),
-              mCategory, std::move(mOptions), markers::TextMarker{}, mText);
+    if (profiler_is_active_and_unpaused()) {
+      mOptions.TimingRef().SetIntervalEnd();
+      AUTO_PROFILER_STATS(AUTO_BASE_PROFILER_MARKER_TEXT);
+      AddMarker(ProfilerString8View::WrapNullTerminatedString(mMarkerName),
+                mCategory, std::move(mOptions), markers::TextMarker{}, mText);
+    }
   }
 
  protected:
